2004-12-29  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/db2html.xsl.in:
	- Change chunk behavior to new gnome-doc-utils behavior
	- Various color and style things that I managed not to commit

	* stylesheets/toc2html.xsl:
	- Formatting improvements

2004-12-27  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	* src/yelp-settings.c:
	* src/yelp-settings.h:
	* src/yelp-toc-pager.c:
	- Added yelp_settings_params to set icon and color params
	- Added colors selected[0-3] and base[0-3]

	* src/yelp-html-gecko.c:
	* stylesheets/man2html.xsl:
	* stylesheets/toc2html.xsl:
	- Switched to XHTML

2004-12-22  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-bookmarks.c:
	- Put the comment write after the attribute writes

2004-12-22  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-bookmarks.c:
	* src/yelp-bookmarks.h:
	* src/yelp-window.c:
	- More bookmarks work from Don Scorgie

2004-12-22  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-base.c:
	* src/yelp-db-pager.c:
	* src/yelp-toc-pager.c:
	* src/yelp-utils.c:
	* src/yelp-utils.h:
	* src/yelp-window.c:
	* src/yelp-window.h:
	- Various bits of cleanup from Don Scorgie

2004-12-22  Shaun McCance  <shaunm@gnome.org>

	* data/icons/Makefile.am:
	* data/icons/yelp-watermark-blockquote.xcf
	* data/icons/yelp-watermark-blockquote-00AB.png
	* data/icons/yelp-watermark-blockquote-00BB.png
	* data/icons/yelp-watermark-blockquote-201C.png
	* data/icons/yelp-watermark-blockquote-201D.png
	* data/icons/yelp-watermark-blockquote-201E.png
	- Added a single XCF to store the blockquote watermarks
	- Added watermark for U+201D

2004-12-15  Shaun McCance  <shaunm@gnome.org>

	* data/scrollkeeper.xml:
	- Put a11y stuff in Accessibility (duh)

	* data/ui/yelp-ui.xml:
	* data/ui/yelp.glade:
	* src/Makefile.am:
	* src/yelp-bookmarks.c:
	* src/yelp-bookmarks.h:
	* src/yelp-base.c:
	* src/yelp-utils.h:
	* src/yelp-window.c:
	* src/yelp-window.h:
	- First pass at bookmarks

2004-12-11  Shaun McCance  <shaunm@gnome.org>
