@@ -52,6 +52,7 @@ typedef enum {
     YELP_COLOR_TEXT = 0,
     YELP_COLOR_ANCHOR,
     YELP_COLOR_BACKGROUND,
+    YELP_COLOR_RULE,
     YELP_COLOR_BASE0,
     YELP_COLOR_BASE1,
     YELP_COLOR_BASE2,
