@@ -1,5 +1,12 @@
 2004-12-29  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-settings.c:
+	* src/yelp-settings.h:
+	* stylesheets/db2html.xsl.in:
+	- Themed rule color for alternating rows in a table
+
+2004-12-29  Shaun McCance  <shaunm@gnome.org>
+
 	* stylesheets/db2html.xsl.in:
 	- Change chunk behavior to new gnome-doc-utils behavior
 	- Various color and style things that I managed not to commit
